--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ colorama==0.4.5
 Flask==2.2.2
 Flask-MySQLdb==1.0.1
 frozenlist==1.3.1
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
